# expedantic

./: .gitmodules  LICENSE  README.md  pyproject.toml  setup.py
examples/: README.md  discriminated_unions.py
expedantic/: config_base.py  utils.py
src/expedantic/: __init__.py  config_base.py  extend_yaml.py  printer.py  utils.py  yaml_utils.py
src/expedantic/printers/: __init__.py  diff.py  help.py  utils.py  validation.py
tests/: test_argparse.py  test_compound_types.py  test_constraints.py  test_include.py  test_literal.py  test_mutually_exclusive_sets.py  test_underscore.py
