[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expedantic"
version = "0.1.8"
description = ""
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "rnilva", email = "rnilva849@gmail.com" },
]
keywords = []
dependencies = [
    "pydantic >= 2.6.3",
    "pydantic_yaml >= 1.3.0",
    "typed-argument-parser",
]

[project.urls]
Homepage = "https://github.com/rnilva/expedantic"

[tool.hatch.build.targets.wheel]
packages =  ["src/expedantic", "/submodules/ccorp_yaml_include/ccorp"]
